added navbar icon, responsive recruitment page

--- a/recruitment.html
+++ b/recruitment.html
@@ -16,7 +16,7 @@
   <meta property="og:description"
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
   <meta property="og:image" content="/images/backgrounds/meta-image.jpg">
-  <meta property="og:url" content="/turnkey-solutions.html">
+  <meta property="og:url" content="/recruitment.html">
   <meta property="og:site_name" content="Digital Shovel">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image:alt" content="Digital Shovel Logo">
@@ -114,7 +114,7 @@
           <div class="dropdown__menu-container">
             <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
               <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
-                <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true" />
+                <img class="icon--md" src="images/icons/icon_navbar_m300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
                     M300 Minipod
@@ -130,7 +130,7 @@
                 </div>
               </a>
               <a class="dropdown__menu-item dropdown__link" href="i300" tabindex="-1" aria-role="menu-item">
-                <img class="icon--md" src="images/icons/icon_i300.svg" alt="Minipod Icon" aria-hidden="true" />
+                <img class="icon--md" src="images/icons/icon_navbar_i300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
                     i300 Minipod
@@ -143,6 +143,54 @@
                     </svg>
                   </h5>
                   <small>Indoor Solution</small>
+                </div>
+              </a>
+              <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    Awning
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Air-Intake Solution</small>
+                </div>
+              </a>
+              <a class="dropdown__menu-item dropdown__link" href="fan" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_fan.svg" alt="Fan Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    15k CFM Fan
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Cooling Solution</small>
+                </div>
+              </a>
+              <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    SmartPDU
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Automation & Monitor</small>
                 </div>
               </a>
             </div>
@@ -159,75 +207,41 @@
     </div>
   </nav>
 
-  <main class="main turnkey recruitment container container--lg">
-
-    <div class="animation">
-      <div class="animation__container">
-        <div class="star star-1"></div>
-        <div class="star star-2"></div>
-        <div class="star star-3"></div>
-        <div class="star star-4"></div>
-        <div class="star star-5"></div>
-        <div class="star star-6"></div>
-
-        <svg version="1.1" width="800px" height="800px" xmlns="http://www.w3.org/2000/svg" x="0" y="0"
-          viewBox="0 0 800 800">
-          <defs>
-            <filter id="mask-filter" filterUnits="userSpaceOnUse" x="0" y="-.5" width="801" height="801">
-              <feColorMatrix values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0" />
-            </filter>
-          </defs>
-          <mask maskUnits="userSpaceOnUse" x="0" y="-.5" width="801" height="801" id="radial-gradient-mask">
-            <g style="filter:url(#mask-filter)">
-              <radialGradient id="radial-gradient" cx="400" cy="400" r="400" gradientUnits="userSpaceOnUse">
-                <stop offset="0" style="stop-color:#fff" />
-                <stop offset=".9" style="stop-color:#000" />
-              </radialGradient>
-              <path style="fill:url(#radial-gradient)" d="M0 0h800v800H0z" />
-            </g>
-          </mask>
-          <g style="mask:url(#radial-gradient-mask)">
-            <g id="vertical">
-              <path class="grid-lines"
-                d="M.5 0v800M40.5 0v800M80.5 0v800M120.5 0v800M160.5 0v800M200.5 0v800M240.5 0v800M280.5 0v800M320.5 0v800M360.5 0v800M400.5 0v800M440.5 0v800M480.5 0v800M520.5 0v800M560.5 0v800M600.5 0v800M640.5 0v800M680.5 0v800M720.5 0v800M760.5 0v800M800.5 0v800" />
-            </g>
-            <g id="horizontal">
-              <path class="grid-lines"
-                d="M800.5 0H.5M800.5 40H.5M800.5 80H.5M800.5 120H.5M800.5 160H.5M800.5 200H.5M800.5 240H.5M800.5 280H.5M800.5 320H.5M800.5 360H.5M800.5 400H.5M800.5 440H.5M800.5 480H.5M800.5 520H.5M800.5 560H.5M800.5 600H.5M800.5 640H.5M800.5 680H.5M800.5 720H.5M800.5 760H.5M800.5 800H.5" />
-            </g>
-          </g>
-        </svg>
-      </div>
-    </div>
+  <main class="main recruitment container container--lg">
 
     <section class="hero recruitment__hero flex flex-col">
       <div class="turnkey__header flex flex-col gap--sm">
         <h1>CONGRATULATIONS!</h1>
-        <p>You have successfully passed your first interview! You are now eligible to move on to the second round, evaluating your technical skills.
+        <p>You have successfully passed your first interview! You are now eligible to move on to the second round,
+          evaluating your technical skills.
         </p>
       </div>
     </section>
-    
+
     <section class="recruitment__interviewers mtop--xl">
       <div class="flex flex-col--lg-tablet jc-sb gap--lg">
         <div class="flex flex-col gap--md">
-          <h3>YOUR INTERVIEWERS</h3>
+          <h2>YOUR INTERVIEWERS</h2>
           <div class="flex flex-col--md-tablet gap--md">
             <div class="flex flex-col gap--sm">
               <img src="images/photos/team/scot-headshot.png" alt="Scot Johnson - CEO & President">
-              <div class="flex ai-c gap--sm">
-                <h4>Scot Johnson</h3>
-                <span>CEO & President</span>
+              <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
+                <h3>Scot Johnson</h3>
+                  <span>CEO & President</span>
               </div>
-              <p>Scot Johnson is the CEO and President of Digital Shovel. He has over 10 years of experience as a business owner, over 5 years in the technology sector and is passionate about innovation and efficiency in the crypto industry.</p>
+              <p>Scot Johnson is the CEO and President of Digital Shovel. He has over 10 years of experience as a
+                business owner, over 5 years in the technology sector and is passionate about innovation and efficiency
+                in the crypto industry.</p>
             </div>
             <div class="flex flex-col gap--sm">
               <img src="images/photos/team/persia-diwali-headshot.png" alt="Persia Khodarahmi - Operations Manager">
-              <div class="flex ai-c gap--sm">
-                <h4>Persia Khodarahmi</h3>
-                <span>Operations Manager</span>
+              <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
+                <h3>Persia Khodarahmi</h3>
+                  <span>Operations Manager</span>
               </div>
-              <p>Persia Khodarahmi is the Operations Manager at Digital Shovel. She is responsible for overseeing the day-to-day operations and is passionate about delivering high-quality products and services to clients and fostering a culture of excellence and collaboration.</p>
+              <p>Persia Khodarahmi is the Operations Manager at Digital Shovel. She is responsible for overseeing the
+                day-to-day operations and is passionate about delivering high-quality products and services to clients
+                and fostering a culture of excellence and collaboration.</p>
             </div>
           </div>
         </div>
@@ -238,32 +252,39 @@
       <div class="grid-item grid-recruitment__item-1">
         <img src="images/icons/icon_research.svg" alt="Research Icon">
         <h5>Learn More About Us</h5>
-        <p>Research Digital Shovel and familiarize yourself with our products and services. This will help you prepare for the interview and demonstrate your enthusiasm and fit for the role and our company.</p>
+        <p>Research Digital Shovel and familiarize yourself with our products and services. This will help you prepare
+          for the interview and demonstrate your enthusiasm and fit for the role and our company.</p>
       </div>
       <div class="grid-item grid-recruitment__item-2">
         <img src="images/icons/icon_chat-bubble.svg" alt="Elaborate Answers Icon">
         <h5>Provide Elaborate Answers</h5>
-        <p>When answering interview questions, it is vital to provide elaborate answers that showcase your skills and experience. Avoid giving one-word or yes/no responses that do not demonstrate your value or potential.</p>
+        <p>When answering interview questions, it is vital to provide elaborate answers that showcase your skills and
+          experience. Avoid giving one-word or yes/no responses that do not demonstrate your value or potential.</p>
       </div>
       <div class="grid-item grid-recruitment__item-3">
         <img src="images/icons/icon_stars.svg" alt="STAR Statements Icon">
         <h5>Use STAR Statements</h5>
-        <p>The STAR method is a technique to structure your answers to behavioral interview questions. It stands for Situation, Task, Action and Result. By using the STAR method, you can showcase your skills and achievements clearly and concisely.</p>
+        <p>The STAR method is a technique to structure your answers to behavioral interview questions. It stands for
+          Situation, Task, Action and Result. By using the STAR method, you can showcase your skills and achievements
+          clearly and concisely.</p>
       </div>
       <div class="grid-item grid-recruitment__item-4">
         <img src="images/icons/icon_document.svg" alt="Promote Professional Background Icon">
         <h5>Professional Background</h5>
-        <p>We want to hear about your achievements, skills and experiences that are relevant to the role you applied for. Don't be shy to promote yourself and show us why you are the best fit for our company.</p>
+        <p>We want to hear about your achievements, skills and experiences that are relevant to the role you applied
+          for. Don't be shy to promote yourself and show us why you are the best fit for our company.</p>
       </div>
       <div class="grid-item grid-recruitment__item-5">
         <img src="images/icons/icon_pedestal.svg" alt="Position Motivations Icon">
         <h5>Position Motivations</h5>
-        <p>We want to know why you are interested in working with us. Being clear about your motivations will help you demonstrate your enthusiasm, fit and potential for the position.</p>
+        <p>We want to know why you are interested in working with us. Being clear about your motivations will help you
+          demonstrate your enthusiasm, fit and potential for the position.</p>
       </div>
       <div class="grid-item grid-recruitment__item-6">
         <img src="images/icons/icon_suit.svg" alt="Business Suit Icon">
         <h5>Dress Business Casual</h5>
-        <p>We recommend that you dress business casual for the occasion. Business casual means wearing clothes that are neat and professional, but not too formal or stiff.</p>
+        <p>We recommend that you dress business casual for the occasion. Business casual means wearing clothes that are
+          neat and professional, but not too formal or stiff.</p>
       </div>
     </section>
 
@@ -282,14 +303,17 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">Minipod</a></li>
+            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
+            <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
+            <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">Products</a></li>
-            <!-- <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li> -->
+            <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
@@ -304,6 +328,8 @@
               src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
           <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
               src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
+          <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
+              src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
         </div>
       </div>
     </div>
