updated navbar, footer, and added overflow-x for grid animation

--- a/recruitment.html
+++ b/recruitment.html
@@ -210,9 +210,9 @@
   <main class="main recruitment container container--lg">
 
     <section class="hero recruitment__hero flex flex-col">
-      <div class="turnkey__header flex flex-col gap--sm">
-        <h1>CONGRATULATIONS!</h1>
-        <p>You have successfully passed your first interview! You are now eligible to move on to the second round,
+      <div class="flex flex-col gap--sm">
+        <h1 class="hero__heading hero__heading--left hero__heading--congrats">CONGRATULATIONS!</h1>
+        <p class="hero__body">You have successfully passed your first interview! You are now eligible to move on to the second round,
           evaluating your technical skills.
         </p>
       </div>
