--- a/thanks.html
+++ b/thanks.html
@@ -195,14 +195,17 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">Minipod</a></li>
+            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
+            <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
+            <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">Products</a></li>
-            <!-- <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li> -->
+            <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
@@ -217,6 +220,8 @@
               src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
           <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
               src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
+          <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
+              src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
         </div>
       </div>
     </div>
