--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -114,7 +114,7 @@
           <div class="dropdown__menu-container">
             <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
               <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
-                <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true" />
+                <img class="icon--md" src="images/icons/icon_navbar_m300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
                     M300 Minipod
@@ -130,7 +130,7 @@
                 </div>
               </a>
               <a class="dropdown__menu-item dropdown__link" href="i300" tabindex="-1" aria-role="menu-item">
-                <img class="icon--md" src="images/icons/icon_i300.svg" alt="Minipod Icon" aria-hidden="true" />
+                <img class="icon--md" src="images/icons/icon_navbar_i300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
                     i300 Minipod
@@ -143,6 +143,54 @@
                     </svg>
                   </h5>
                   <small>Indoor Solution</small>
+                </div>
+              </a>
+              <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    Awning
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Air-Intake Solution</small>
+                </div>
+              </a>
+              <a class="dropdown__menu-item dropdown__link" href="fan" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_fan.svg" alt="Fan Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    15k CFM Fan
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Cooling Solution</small>
+                </div>
+              </a>
+              <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    SmartPDU
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Automation & Monitor</small>
                 </div>
               </a>
             </div>
@@ -201,9 +249,9 @@
     </div>
 
     <section class="hero flex flex-col">
-      <div class="turnkey__header flex flex-col gap--sm">
-        <h1>TURN-KEY SOLUTIONS</h1>
-        <p>Our turn-key solutions are designed to make your life easier by providing a comprehensive and efficient
+      <div class="flex flex-col gap--sm">
+        <h1 class="hero__heading hero__heading--left">TURN-KEY SOLUTIONS</h1>
+        <p class="hero__body">Our turn-key solutions are designed to make your life easier by providing a comprehensive and efficient
           solution to your business needs. From start to finish, we'll handle all the details, so you can focus on what
           you do best.
         </p>
@@ -304,14 +352,17 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">Minipod</a></li>
+            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
+            <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
+            <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">Products</a></li>
-            <!-- <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li> -->
+            <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
@@ -326,6 +377,8 @@
               src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
           <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
               src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
+          <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
+              src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
         </div>
       </div>
     </div>
