added smooth scrolling

--- a/i300.html
+++ b/i300.html
@@ -45,6 +45,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/gallery.js"></script>
+  <script defer src="/app/js/smooth-scroll.min.js"></script>
 
   <title>Digital Shovel • i300 Minipod</title>
 
