--- a/m300.html
+++ b/m300.html
@@ -46,6 +46,7 @@
   <script defer src="/app/js/bear-market-promo.js"></script>
   <script defer src="/app/js/gallery.js"></script>
   <script defer src="/app/js/home.js"></script>
+  <script defer src="/app/js/smooth-scroll.min.js"></script>
 
 
   <title>Digital Shovel • M300 Minipod</title>
