--- a/thanks.html
+++ b/thanks.html
@@ -40,6 +40,7 @@
   <script defer src="/app/js/contact.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/smooth-scroll.min.js"></script>
 
   <title>Digital Shovel • Form Submitted</title>
 
