--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -39,6 +39,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/smooth-scroll.min.js"></script>
 
   <title>Digital Shovel • Turn-Key Solutions</title>
 
