--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/smooth-scroll.min.js"></script>
 
   <title>Digital Shovel</title>
 
