--- a/voskcoin.html
+++ b/voskcoin.html
@@ -41,6 +41,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/detect-location.js"></script>
+  <script defer src="/app/js/smooth-scroll.min.js"></script>
 
   <title>Digital Shovel x VoskCoin</title>
 
