--- a/i300.html
+++ b/i300.html
@@ -38,14 +38,16 @@
   </noscript>
 
   <!-- GSAP -->
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+  <script defer src="/app/js/ScrollTrigger.min.js"></script>
+  <script defer src="/app/js/ScrollSmoother.min.js"></script>
 
   <!-- Javascript -->
   <script defer src="/app/js/detect-scroll-i300.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/gallery.js"></script>
-  <script defer src="/app/js/smooth-scroll.min.js"></script>
+  <script defer src="/app/js/scroll-animations-i300.js"></script>
 
   <title>Digital Shovel • i300 Minipod</title>
 
